--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://github.com/Santiago2132/visionfolio/blob/f472bfe0b0d4de44d71d9854004909d078bb81b7/images/tierra.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HeroUI Chat - App</title>
+    <title>Portafolio</title>
   </head>
   <body class="h-full min-h-screen">
     <div id="root"></div>
