--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://github.com/Santiago2132/visionfolio/blob/f472bfe0b0d4de44d71d9854004909d078bb81b7/images/tierra.png" />
+    <link rel="icon" type="image/svg+xml" href="images/tierra.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portafolio</title>
   </head>
